# project-b-blueprint

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  fly.toml  index.html  project-b-blueprint-1-prompt.md  sample.m4a  vercel.json  webchat_mock_server.py
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/: copilot-instructions.md
.hive-mind/: config.json  hive.db
.serena/: project.yml
backend/: README.md  pyproject.toml
backend/.claude-flow/metrics/: performance.json  task-metrics.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  approvals.py  conversations.py
backend/app/repositories/: __init__.py  conversation_repository.py
backend/app/schemas/: __init__.py  conversation.py
backend/app/services/: __init__.py  ai_response_service.py  approval_service.py  conversation_service.py  llm_service.py  qdrant_service.py  vector_search_service.py
backend/app/workers/: __init__.py  scheduler.py
backend/core/config/: __init__.py
backend/core/database/: __init__.py  supabase_client.py
backend/core/logging/: __init__.py
backend/infrastructure/: __init__.py
backend/infrastructure/embeddings/: __init__.py  bootstrap_qdrant.py
backend/project_b_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: __init__.py
backend/tests/contract/: test_conversations.py
backend/tests/integration/: test_llm_integration.py
backend/tests/unit/: test_conversation_service.py  test_qdrant_service.py  test_rag_integration.py
(+103 files in other folders)
